--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -128,9 +128,42 @@
         android:textAppearance="?android:attr/textAppearanceMedium" />
   
     </TableRow>  
+       <TableRow
+            android:id="@+id/tableRow5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:baselineAligned="false" >        
+        
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_span="1"
+        android:text="Last Update:"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+
+  
+    </TableRow> 
+       <TableRow
+            android:id="@+id/tableRow6"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:baselineAligned="false" >        
+        
+
+    <TextView
+        android:id="@+id/textViewUpdateStatus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_span="3"
+        android:text="   Unknown"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+  
+    </TableRow>               
                 
                <TableRow
-            android:id="@+id/tableRow4"
+            android:id="@+id/tableRow7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >
 
