--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -185,7 +185,12 @@
 
         </TableRow>
 
-
+               <Button
+                   android:id="@+id/historyButton"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:text="History"
+                   android:onClick="showHistory" />
                 
     </TableLayout>
 
